@@ -1,3 +1,7 @@
+2009-05-09  Badlop  <badlop@process-one.net>
+
+	* src/mod_shcommands.erl: Fix unused variables and web calls.
+
 2007-12-26  Badlop  <badlop@process-one.net>
 
 	* src/mod_shcommands.erl: Translate menu items of webadmin hooks
